# TrainingCPP

./: Audi.cpp  Audi.h  Automobil.cpp  Automobil.h  Mercedes.cpp  Mercedes.h  Utility.cpp  Utility.h  main.cpp  status.txt
Automobil_example/: main.cpp
BoostUnitTest/Cmake/: CMakeLists.txt  CustomList.cpp  CustomList.h  CustomListTest.cpp  CustomListTest.h  bash.sh  coverage.info  coverage_filtered.info
BoostUnitTest/Cmake/lcov/: index-sort-f.html  index-sort-l.html  index.html
BoostUnitTest/Cmake/lcov/Cmake/: CustomList.h.func-sort-c.html  CustomList.h.func.html  CustomList.h.gcov.html  CustomListTest.h.func-sort-c.html  CustomListTest.h.func.html  CustomListTest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
BoostUnitTest/Exemple/Shared_library_usage_variant/: build.sh  ex1  (+2 more)
BoostUnitTest/Task8/: CustomList.h  CustomListTest.cpp  MyTests  bash.sh
Cmake/: CMakeLists.txt  SocketCommunication.cpp  SocketCommunication.h  bash.sh  client.cpp
Design_Patterns/AbstractFactory/: AbstractFactory.cpp
Design_Patterns/Adapter/: adapter  adapter.cpp
Design_Patterns/Singleton_and_Multithreading/: Singleton_and_Multithreading.cpp
Multiprocessing/: multiprocessing  multiprocessing.cpp  sharedFile.txt
Multiprocessing_SharedMemory/: client.txt  server.txt  sharedMemory  sharedMemory.cpp
Multiprocessing_Sokets/: multiprocessing  multiprocessing.cpp
Observer/: observer  observer.cpp
printScreen/: Task_3_and_4: Singleton and Multithreading
serverClient_inDifferentFiles/: build.sh  compille.sh  server.cpp  setScriptToRunAtStartUp.sh  startupScript.sh
(+8 files in other folders)
